sound off after awaking from sleep has been fixed

--- a/OC/Kexts/AppleALC.kext/Contents/Info.plist
+++ b/OC/Kexts/AppleALC.kext/Contents/Info.plist
@@ -5906,6 +5906,12 @@
 					<integer>1</integer>
 					<key>LayoutID</key>
 					<integer>21</integer>
+					<key>WakeConfigData</key>
+					<data>
+					AUcMAg==
+					</data>
+					<key>WakeVerbReinit</key>
+					<true/>
 				</dict>
 				<dict>
 					<key>AFGLowPowerState</key>
