--- a/OC/config.plist
+++ b/OC/config.plist
@@ -1512,7 +1512,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>keepsyms=1 debug=0x100 alcid=21 alcdelay=1000 darkwake=2 swd_panic=1 igfxfw=2 igfxonln=1</string>
+				<string>keepsyms=1 debug=0x100 alcid=21 alcdelay=1000 darkwake=8 swd_panic=1 igfxfw=2 igfxonln=1</string>
 				<key>csr-active-config</key>
 				<data>/w8AAA==</data>
 				<key>prev-lang:kbd</key>
@@ -1605,9 +1605,9 @@
 			<key>SystemProductName</key>
 			<string>MacBookPro16,4</string>
 			<key>SystemSerialNumber</key>
-			<string>C02C9MZ4MD6T</string>
+			<string>C02DVQYHMD6T</string>
 			<key>SystemUUID</key>
-			<string>BE4C8BAD-60DF-4244-8C3C-5495563D9B28</string>
+			<string>2F7E9E67-E94D-4046-8F5C-DD11954FA021</string>
 		</dict>
 		<key>Generic</key>
 		<dict>
@@ -1616,9 +1616,9 @@
 			<key>MaxBIOSVersion</key>
 			<false/>
 			<key>MLB</key>
-			<string>C020087014N0000FB</string>
+			<string>C02051609J900008C</string>
 			<key>ProcessorType</key>
-			<integer>0</integer>
+			<integer>1793</integer>
 			<key>ROM</key>
 			<data>cr4YPZso</data>
 			<key>SpoofVendor</key>
@@ -1628,9 +1628,9 @@
 			<key>SystemProductName</key>
 			<string>MacBookPro16,4</string>
 			<key>SystemSerialNumber</key>
-			<string>C02C9MZ4MD6T</string>
+			<string>C02DVQYHMD6T</string>
 			<key>SystemUUID</key>
-			<string>BE4C8BAD-60DF-4244-8C3C-5495563D9B28</string>
+			<string>2F7E9E67-E94D-4046-8F5C-DD11954FA021</string>
 		</dict>
 		<key>PlatformNVRAM</key>
 		<dict>
@@ -1641,13 +1641,13 @@
 			<key>FirmwareFeaturesMask</key>
 			<data>f////wAAAAA=</data>
 			<key>MLB</key>
-			<string>C020087014N0000FB</string>
+			<string>C02051609J900008C</string>
 			<key>ROM</key>
 			<data>cr4YPZso</data>
 			<key>SystemSerialNumber</key>
-			<string></string>
+			<string>C02DVQYHMD6T</string>
 			<key>SystemUUID</key>
-			<string>BE4C8BAD-60DF-4244-8C3C-5495563D9B28</string>
+			<string>2F7E9E67-E94D-4046-8F5C-DD11954FA021</string>
 		</dict>
 		<key>UpdateDataHub</key>
 		<true/>
